# cio-file-uploader

./: .env.example  Procfile  pyproject.toml  run.py
app/: connection.py  main.py
app/auth/: deps.py
app/integrations/: dropbox_client.py  email_client.py  notion_client.py
app/routes/api/documents/: required.py
app/routes/api/facility/: me.py  sync.py
app/routes/api/hooks/: reminder_mail.py  send_initial_email.py
app/routes/api/uploads/: document.py  other.py
app/services/documents/: required_service.py
app/services/facility/: me_service.py  notion_facility_service.py  sync_notion_status_service.py
app/services/hooks/: reminder_mail_service.py  send_initial_email_service.py
app/services/uploads/: document_service.py  other_service.py
docs/: cio_file_uploader.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: FileUploadZone.jsx  PrivateRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: fetchWithAuth.js  supabase.js
frontend/src/pages/: FacilityHome.jsx  Login.jsx
