[project]
name = "cio-file-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "gunicorn>=26.0.0",
    "supabase>=2.31.0",
    "notion-client>=3.1.0",
    "python-dotenv>=1.1.0",
    "dropbox>=12.0.2",
    "python-multipart>=0.0.32",
]

[tool.uv]
exclude-newer = "3 days"